Improve C-API doc for GEOSPolygonize_valid

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -4336,14 +4336,16 @@ extern GEOSGeometry GEOS_DLL *GEOSPolygonize(
     unsigned int ngeoms);
 
 /**
-* Same polygonizing behavior as GEOSPolygonize(), but only returning results
-* that are valid.
+* Has the same polygonizing behavior as GEOSPolygonize(), 
+* but returns a result which is a valid polygonal geometry.
+* The result will not contain any edge-adjacent elements. 
 *
 * \param geoms Array of linear geometries to polygons. Caller retains ownersihp of both array container and objects.
 * \param ngeoms Size of the geoms array.
 * \return The polygonal output geometry.
 * Caller is responsible for freeing with GEOSGeom_destroy().
 * \see geos::operation::polygonize::Polygonizer
+* \see GEOSBuildArea()
 *
 * \since 3.8
 */
