--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2098,7 +2098,9 @@ extern void GEOS_DLL finishGEOS(void);
 * Free strings and byte buffers returned by functions such
 * as GEOSWKBWriter_write(),
 * GEOSWKBWriter_writeHEX() and GEOSWKTWriter_write(), etc.
-* \param buffer The memory to free
+* If passed a null pointer the function does nothing.
+
+* \param buffer The memory to free (may be null)
 * \since 3.1
 */
 extern void GEOS_DLL GEOSFree(void *buffer);
