--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -4449,10 +4449,12 @@ extern GEOSGeometry GEOS_DLL *GEOSDensify(
     double tolerance);
 
 /**
-* Sews together a set of fully noded LineStrings
-* removing any cardinality 2 nodes in the linework.
+* Merges a set of LineStrings,
+* joining them at nodes which have cardinality 2.
+* Lines may have their direction reversed.
+
 * \param g The input linework
-* \return The merged linework
+* \return The merged linework.
 * Caller is responsible for freeing with GEOSGeom_destroy().
 * \see geos::operation::linemerge::LineMerger
 * \since 2.2
@@ -4460,11 +4462,13 @@ extern GEOSGeometry GEOS_DLL *GEOSDensify(
 extern GEOSGeometry GEOS_DLL *GEOSLineMerge(const GEOSGeometry* g);
 
 /**
-* Sews together a set of fully noded LineStrings
-* removing any cardinality 2 nodes in the linework
-* only if possible without changing order of points.
+* Merges a set of LineStrings,
+* joining them at nodes which have cardinality 2.
+* and where the lines have the same direction.
+* This means that lines do not have their direction reversed.
+
 * \param g The input linework
-* \return The merged linework
+* \return The merged linework.
 * Caller is responsible for freeing with GEOSGeom_destroy().
 * \see geos::operation::linemerge::LineMerger
 *
