For XCode 15, the dyld linker behaviour changed and no longer automatically falls back to checking the contents of /usr/local/lib when trying to evaluate an @rpath dependency. As a result, runtime linking is failing on up-to-date MacOS systems. The INSTALL_NAME_DIR directive is used for APPLE builds, to ensure that the installed library advertises its install path, so libraries that link to it can find it again when dynamic linking time arrives.
https://stackoverflow.com/questions/77137284/dynamic-linker-fails-to-find-symbol-at-runtime-after-updating-to-xcode-15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,6 +300,12 @@ add_library(GEOS::geos ALIAS geos)
 target_link_libraries(geos PUBLIC geos_cxx_flags PRIVATE $<BUILD_INTERFACE:ryu>)
 # ryu is an object library, nothing is actually being linked here. The BUILD_INTERFACE
 # switch was necessary to build on AppVeyor (CMake 3.16.2) but not locally (CMake 3.16.3)
+
+if(APPLE AND BUILD_SHARED_LIBS)
+  set_target_properties(geos PROPERTIES
+    INSTALL_NAME_DIR "${CMAKE_INSTALL_FULL_LIBDIR}")
+endif()
+
 add_subdirectory(include)
 add_subdirectory(src)
 
@@ -325,6 +331,11 @@ endif()
 add_library(geos_c "")
 add_library(GEOS::geos_c ALIAS geos_c)
 target_link_libraries(geos_c PRIVATE geos)
+
+if(APPLE AND BUILD_SHARED_LIBS)
+  set_target_properties(geos_c PROPERTIES
+    INSTALL_NAME_DIR "${CMAKE_INSTALL_FULL_LIBDIR}")
+endif()
 
 if(BUILD_SHARED_LIBS)
   target_compile_definitions(geos_c
