--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,6 +53,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+          sudo apt-get update
           sudo apt-get install -y cmake g++
 
     - name: Build
